Add SignUp-form. Configure routing between Sign In and Sign Up forms

--- a/SovaCloud/SovaCloud/SovaCloud.csproj
+++ b/SovaCloud/SovaCloud/SovaCloud.csproj
@@ -20,6 +20,8 @@
 
   <ItemGroup>
     <Folder Include="Services\" />
+    <Folder Include="Views\SignIn\" />
+    <Folder Include="Views\SignUp\" />
   </ItemGroup>
 
 </Project>
