--- a/SovaCloud/SovaCloud/SovaCloud.csproj
+++ b/SovaCloud/SovaCloud/SovaCloud.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.7.307.32" />
     <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.302.45" />
     <PackageReference Include="Kralizek.Extensions.Configuration.AWSSecretsManager" Version="1.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
